Added inverted index search

--- a/Simple Search Engine/Inverted Index search/task-info.yaml
+++ b/Simple Search Engine/Inverted Index search/task-info.yaml
@@ -295,5 +295,9 @@ files:
 
   learner_created: false
 feedback_link: https://hyperskill.org/projects/89/stages/498/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/89/stages/498/implement">JetBrains
+    Academy</a>
+  time: Mon, 26 Oct 2020 17:59:13 UTC
 record: -1
